# Spark-Kernel

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  README.md  grub.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
Spark/: linker.ld  main.asm  multiboot.hpp  spark.cpp
Spark/hardware/: msr.cpp  msr.hpp  panic.cpp
Spark/hardware/acpi/: acpi.cpp  acpi.hpp  apic.cpp  apic.hpp
Spark/hardware/cpu/: cpu.cpp
Spark/hardware/devices/: pci.cpp  pci.hpp  vbe.cpp  vbe.hpp
Spark/hardware/mm/: mm.cpp  pmm.cpp  vmm.hpp
Spark/lib/: ctype.hpp  lib.cpp  lib.hpp  linked_list.hpp  math.cpp  spinlock.cpp  spinlock.hpp
Spark/userland/: multitasking.cpp  multitasking.hpp
spark/: kernel_main.cpp  linker.ld  main.asm
spark/hardware/: idt.cpp  msr.hpp  port.cpp  port.hpp  terminal.cpp
spark/hardware/acpi/: acpi.cpp  apic.cpp
spark/hardware/devices/: pci.cpp
spark/hardware/mm/: mm.cpp  mm.hpp  pmm.cpp  vmm.cpp  vmm.hpp
spark/lib/: lib.cpp  lib.hpp  linked_list.hpp  math.cpp  math.hpp
spark/sys/: idt.cpp  panic.cpp  terminal.hpp
spark/sys/acpi/: acpi.cpp  apic.hpp
src/: boot.S  boot.asm  kernel.cpp  kernel_main.cpp  linker.ld  main.asm  multiboot.hpp  ubsan.hpp  version.cpp  version.hpp
src/hardware/: cpu.cpp  cpu.hpp  lock.cpp  lock.hpp  memory.cpp  memory.hpp  port.cpp  port.hpp
src/lib/: bit.hpp  ctype.cpp  lib.cpp  lib.hpp  math.cpp  math.hpp  spinlock.cpp  spinlock.hpp
src/sys/: acpi.cpp  acpi.hpp  idt.cpp  idt.hpp  panic.cpp  panic.hpp  terminal.cpp  terminal.hpp
(+27 files in other folders)
